--- a/app/src/main/res/layout/activity_notes_taker.xml
+++ b/app/src/main/res/layout/activity_notes_taker.xml
@@ -4,47 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/black"
+    android:orientation="vertical"
     tools:context=".NotesTakerActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_notes"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:id="@+id/imageView_tallenna"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_tallenna"
-                android:padding="8dp"
-                android:background="@android:color/transparent"
                 android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"/>
-            </RelativeLayout>
+                android:layout_height="?attr/actionBarSize"
+                android:layout_alignParentEnd="true"
+                android:background="@android:color/transparent"
+                android:padding="8dp"
+                android:src="@drawable/ic_tallenna" />
+        </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
+
     <EditText
         android:id="@+id/editText_otsikko"
-        android:hint="Otsikko: "
-        android:textColorHint="@color/white"
-        android:padding="8dp"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        android:singleLine="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:hint="Otsikko: "
+        android:padding="8dp"
+        android:singleLine="true"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
     <EditText
         android:id="@+id/editText_notes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="Lisää note: "
-        android:textColorHint="@color/white"
         android:padding="8dp"
         android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:textSize="18sp"
-        android:textStyle="normal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:textStyle="normal" />
 
 
 </LinearLayout>
