--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightgrey">#D7D3DA</color>
+    <color name="lightblue">#99DCFF</color>
+    <color name="darkgrey">#131C25</color>
+    <color name="lightpink">#FFADE2</color>
+    <color name="lightgreen">#C9FFAD</color>
+    <color name="lightpurple">#CEADFF</color>
+    <color name="lightorange">#FFCEAD</color>
 </resources>
