--- a/app/src/main/res/layout/activity_notes_taker.xml
+++ b/app/src/main/res/layout/activity_notes_taker.xml
@@ -22,6 +22,15 @@
                 android:background="@android:color/transparent"
                 android:layout_width="?attr/actionBarSize"
                 android:layout_height="?attr/actionBarSize"/>
+
+            <ImageView
+                android:id="@+id/imageView_camera"
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_toStartOf="@+id/imageView_tallenna"
+                android:background="@android:color/transparent"
+                android:padding="8dp"
+                android:src="@drawable/ic_camera" />
             </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
     <EditText
