--- a/app/src/main/res/layout/activity_notes_taker.xml
+++ b/app/src/main/res/layout/activity_notes_taker.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/black"
-    tools:context=".NotesTakerActivity">
+    tools:context=".NotesTakerActivity"
+    tools:viewBindingIgnore="true">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_notes"
         android:layout_width="match_parent"
