--- a/app/src/main/res/layout/notes_list.xml
+++ b/app/src/main/res/layout/notes_list.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:cardBackgroundColor="@color/white"
     android:id="@+id/notes_container"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    tools:viewBindingIgnore="true">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
